added support to string template

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,6 +16,7 @@
     <p id="el_prop6">hello <i>{{prop6}}!</i></p> 
     <p id="el_prop7">hello <i>{{prop7}}!</i></p> 
     <p id="el_prop8">hello <i>{{prop8}}!</i>{{prop9}}</p> 
+    <p id="el_prop13">hello <i>{{prop13}}!</i></p> 
 
   </body>
 </html>
