added support to use expression as token

--- a/tests/index.html
+++ b/tests/index.html
@@ -17,6 +17,7 @@
     <p id="el_prop7">hello <i>{{prop7}}!</i></p> 
     <p id="el_prop8">hello <i>{{prop8}}!</i>{{prop9}}</p> 
     <p id="el_prop13">hello <i>{{prop13}}!</i></p> 
+    <p id="el_prop14">hello <i>{{prop14.length}}!</i></p> 
 
   </body>
 </html>
