added array proxy

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="qunit/qunit-1.11.0.js"></script>
-    <script src="../alloy-0.1.0.min.js"></script>
+    <script src="../alloy-0.1.0.js"></script>
     <script src="test.js"></script>
 
     <p id="el_prop6">hello <i>{{prop6}}!</i></p> 
