added support to element bind

--- a/tests/index.html
+++ b/tests/index.html
@@ -19,5 +19,7 @@
     <p id="el_prop13">hello <i>{{prop13}}!</i></p> 
     <p id="el_prop14">hello <i>{{prop14.length}}!</i></p> 
 
+    <div id="el_prop15"><input type="text" name="fname" data-al-bind="prop15"></div>
+
   </body>
 </html>
