--- a/tests/index.html
+++ b/tests/index.html
@@ -21,5 +21,11 @@
 
     <div id="el_prop15"><input type="text" name="fname" data-al-bind="prop15"></div>
 
+    <div data-al-init="prop16">
+      {{name}}<br/>
+      {{value}}<br/>
+      {{context}}<br/>
+    </div>
+
   </body>
 </html>
